# h-box2c

./: .gitignore  .gitmodules  Build.hx  CMakeLists.txt  README.md  build_lib.sh  generate.sh  haxelib.json  test-cpp.hxml
generator/: Generator.hx
hx/: box2d.idl
hx/box2d/: Box2d.hx  box2d.xml
hx/box2d/old/: Body.hx  BodyDef.hx  EBodyType.hx  Native.hx  QueryFilter.hx  Shape.hx  ShapeDef.hx  World.hx  WorldId.hx
lib/: box2c.idl
lib/box2c/: Body.hx  BodyDef.hx  EBodyType.hx  Native.hx  QueryFilter.hx  Shape.hx  ShapeDef.hx  World.hx  WorldId.hx
src/: h-box2c.h  h-box2d-helpers.h
src/hxcpp/: Box2d_hxcpp_idl.h
test/: Test.hx  test.hxml
